[tool.poetry]
name = "nonebot-plugin-nokia"
version = "0.0.3"
description = "README.md"
authors = ["kexue <xana278@foxmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.3,<4.0.0"
pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}
nonebot2 = {version = "^2.0.0-alpha.16", allow-prereleases = true}
nonebot-plugin-test = {version = "^0.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
